update entities
