# src/doc/swagger.json
@@ -1177,7 +1177,7 @@
         "isNominated": {
           "type": "boolean"
         },
-        "isEleminated": {
+        "isEliminated": {
           "type": "boolean"
         },
         "gender": {
@@ -1358,40 +1358,6 @@
           "type": "integer",
           "format": "int64",
           "example": 3
-        }
-      }
-    },
-    "VoteData": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "updatedAt": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "NominationData": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "createdAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "updatedAt": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
